# fplll-cuda-enumeration

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  cuda.mk  cudalt.py  fplll-cuda-enumeration.sln  fplll-cuda-enumeration.vcxproj  helloworld  libtool
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
report/: bibliography.bib  bkz_time_formatter.py  out_cu_350bit.txt  out_mt_350bit.txt  out_st_350bit.txt  regex_proc_cu.txt  regex_proc_mt.txt  report.aux  report.fdb_latexmk  report.fls  report.tex  report_data_formatter.py
src/: api.h  atomic.h  concat_all_for_godbolt.sh  constants.cuh  cpu_test.cuh  cuda_check.h  cuda_util.cuh  cuda_wrapper.cu  cuda_wrapper.h  cuda_wrapper_out.cu  enum.cuh  group.cuh  helloworld.cpp  memory.h  prefix.cuh  recenum.cuh  streaming.cuh  test.cpp  testdata.cpp  testdata.h  types.cuh  util.h
src/.deps/: helloworld.Po
